--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1 {
   width: 100%;
 }
 
-.altered-color {
+.output-color {
   background: var(--output-color);
   height: 60px;
   width: 100%;
@@ -79,4 +79,10 @@ h1 {
   top: 5px;
   transition: all 0.3s;
   width: 22px;
+}
+
+/* JavaScript Classes */
+.isActive {
+  color: rgba(49, 218, 77, 0.75);
+  text-shadow: 0 0 1px #49fb35;
 }
