Small changes in css and JS

--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@ p {
   margin-bottom: 0.5rem;
 }
 
-h1,
-p {
+h1, p {
   color: aliceblue;
 }
 
@@ -48,6 +47,7 @@ h1 {
 }
 
 /* Switch input */
+
 .switchInput {
   display: none;
 }
@@ -55,6 +55,7 @@ h1 {
 .switchToggle::before {
   background-color: var(--switch-color-off);
   border-radius: 32px;
+
   /* Must have this for anything to show up! */
   content: "";
   height: 32px;
@@ -70,6 +71,7 @@ h1 {
 .switchToggle {
   padding-left: 70px;
   padding-top: 4px;
+
   /* This will control the absolutely positioned elements! */
   position: relative;
 }
@@ -81,18 +83,19 @@ h1 {
   height: 24px;
   left: 4px;
   position: absolute;
-  /* instead of 'all' could just do background color and translate x */
 
-  transition: all;
+  /* instead of 'all' could just do background color and translate x */
+  transition: all 0.3s;
   top: 8px;
   width: 24px;
 }
 
-.switchInput:checked + .switchInput::after {
-  transform: translateX(64px);
+.switchInput:checked + .switchToggle::after {
+  transform: translateX(32px);
 }
 
 /* Utility classes */
+
 .flex {
   display: flex;
 }
@@ -106,6 +109,7 @@ h1 {
 }
 
 /* JS classes */
+
 .isActive {
   color: rgba(73, 251, 53, 0.75);
   text-shadow: 0 0 1px #49fb35;
